--- a/gluegap.html
+++ b/gluegap.html
@@ -1469,7 +1469,6 @@
           best.dispXEma = lerp(best.dispXEma ?? nextX, nextX, EMA_X);
 
           best.areaEma = lerp(best.areaEma ?? m.areaPx2, m.areaPx2, EMA_AREA);
-best.blobWEma = lerp(best.blobWEma ?? (m.blobWpx || 0), (m.blobWpx || 0), EMA_AREA);
           best.confEma = lerp(best.confEma ?? m.conf, m.conf, EMA_CONF);
 
           best.drawYEma = deadband(best.drawYEma, best.drawYEma, 0.6);
@@ -1981,22 +1980,103 @@ function resetLightBias() {
     // =========================================================
     // Largest contour AREA (px^2) inside each detected "box"
     // =========================================================
-    // =========================================================
-// Largest contour METRICS inside each detected "box"
-// - areaPx2: px^2 (เหมือนเดิม)
-// - widthPx: ความกว้างจริงของ blob (px) จาก bounding box ของ component ที่ใหญ่สุด
+    function computeLargestBlobAreaPx2(data, w, h, x0, y0, x1, y1, lightBias) {
+      x0 = Math.max(0, Math.min(w - 1, x0));
+      x1 = Math.max(0, Math.min(w, x1));
+      y0 = Math.max(0, Math.min(h - 1, y0));
+      y1 = Math.max(0, Math.min(h, y1));
+      if (x1 <= x0 + 2 || y1 <= y0 + 2) return 0;
+
+      const ds = 3;
+      const gw = Math.floor((x1 - x0) / ds);
+      const gh = Math.floor((y1 - y0) / ds);
+      if (gw < 6 || gh < 6) return 0;
+
+      const mask = new Uint8Array(gw * gh);
+
+      let sum = 0, cnt = 0, minL = 255;
+      for (let gy = 0; gy < gh; gy++) {
+        const py = y0 + gy * ds;
+        const row = py * w * 4;
+        for (let gx = 0; gx < gw; gx++) {
+          const px = x0 + gx * ds;
+          const i = row + px * 4;
+          const luma = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+          sum += luma; cnt++;
+          if (luma < minL) minL = luma;
+        }
+      }
+      const mean = cnt ? sum / cnt : 180;
+
+      let thr = Math.min(245, Math.max(10, minL + Math.max(14, (mean - minL) * 0.55)));
+      thr = clamp(thr + (lightBias || 0), 5, 250);
+
+      for (let gy = 0; gy < gh; gy++) {
+        const py = y0 + gy * ds;
+        const row = py * w * 4;
+        for (let gx = 0; gx < gw; gx++) {
+          const px = x0 + gx * ds;
+          const i = row + px * 4;
+          const luma = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+          if (luma <= thr) mask[gy * gw + gx] = 1;
+        }
+      }
+
+      const visited = new Uint8Array(gw * gh);
+      const qx = new Int16Array(gw * gh);
+      const qy = new Int16Array(gw * gh);
+
+      let bestArea = 0;
+
+      for (let gy = 0; gy < gh; gy++) {
+        for (let gx = 0; gx < gw; gx++) {
+          const idx = gy * gw + gx;
+          if (!mask[idx] || visited[idx]) continue;
+
+          let head = 0, tail = 0;
+          visited[idx] = 1;
+          qx[tail] = gx; qy[tail] = gy; tail++;
+
+          let area = 0;
+
+          while (head < tail) {
+            const x = qx[head], y = qy[head]; head++;
+            area++;
+
+            const n1 = (y - 1) * gw + x;
+            const n2 = (y + 1) * gw + x;
+            const n3 = y * gw + (x - 1);
+            const n4 = y * gw + (x + 1);
+
+            if (y > 0 && mask[n1] && !visited[n1]) { visited[n1] = 1; qx[tail] = x; qy[tail] = y - 1; tail++; }
+            if (y < gh - 1 && mask[n2] && !visited[n2]) { visited[n2] = 1; qx[tail] = x; qy[tail] = y + 1; tail++; }
+            if (x > 0 && mask[n3] && !visited[n3]) { visited[n3] = 1; qx[tail] = x - 1; qy[tail] = y; tail++; }
+            if (x < gw - 1 && mask[n4] && !visited[n4]) { visited[n4] = 1; qx[tail] = x + 1; qy[tail] = y; tail++; }
+          }
+
+          if (area > bestArea) bestArea = area;
+        }
+      }
+
+      return bestArea * (ds * ds);
+    }
+
+
 // =========================================================
-function computeLargestBlobMetricsPx(data, w, h, x0, y0, x1, y1, lightBias) {
+// ✅ VISUAL: paint largest detected BLOB inside each bounding "box"
+// (Neon reflective pink overlay)
+// =========================================================
+function paintLargestBlobOverlay_(ctx, data, w, h, x0, y0, x1, y1, lightBias, roiX_disp, roiY_disp, sx, sy) {
   x0 = Math.max(0, Math.min(w - 1, x0));
   x1 = Math.max(0, Math.min(w, x1));
   y0 = Math.max(0, Math.min(h - 1, y0));
   y1 = Math.max(0, Math.min(h, y1));
-  if (x1 <= x0 + 2 || y1 <= y0 + 2) return { areaPx2: 0, widthPx: 0, heightPx: 0 };
+  if (x1 <= x0 + 2 || y1 <= y0 + 2) return;
 
-  const ds = 3;
+  const ds = 3; // MUST match computeLargestBlobAreaPx2()
   const gw = Math.floor((x1 - x0) / ds);
   const gh = Math.floor((y1 - y0) / ds);
-  if (gw < 6 || gh < 6) return { areaPx2: 0, widthPx: 0, heightPx: 0 };
+  if (gw < 6 || gh < 6) return;
 
   const mask = new Uint8Array(gw * gh);
 
@@ -2033,7 +2113,9 @@ function computeLargestBlobMetricsPx(data, w, h, x0, y0, x1, y1, lightBias) {
   const qy = new Int16Array(gw * gh);
 
   let bestArea = 0;
-  let bestMinX = 0, bestMaxX = -1, bestMinY = 0, bestMaxY = -1;
+  let bestTail = 0;
+  const bestX = new Int16Array(gw * gh);
+  const bestY = new Int16Array(gw * gh);
 
   for (let gy = 0; gy < gh; gy++) {
     for (let gx = 0; gx < gw; gx++) {
@@ -2045,16 +2127,10 @@ function computeLargestBlobMetricsPx(data, w, h, x0, y0, x1, y1, lightBias) {
       qx[tail] = gx; qy[tail] = gy; tail++;
 
       let area = 0;
-      let minX = gx, maxX = gx, minY = gy, maxY = gy;
 
       while (head < tail) {
         const x = qx[head], y = qy[head]; head++;
         area++;
-
-        if (x < minX) minX = x;
-        if (x > maxX) maxX = x;
-        if (y < minY) minY = y;
-        if (y > maxY) maxY = y;
 
         const n1 = (y - 1) * gw + x;
         const n2 = (y + 1) * gw + x;
@@ -2069,29 +2145,51 @@ function computeLargestBlobMetricsPx(data, w, h, x0, y0, x1, y1, lightBias) {
 
       if (area > bestArea) {
         bestArea = area;
-        bestMinX = minX; bestMaxX = maxX;
-        bestMinY = minY; bestMaxY = maxY;
+        bestTail = tail;
+        for (let k = 0; k < tail; k++) { bestX[k] = qx[k]; bestY[k] = qy[k]; }
       }
     }
   }
 
-  if (bestArea <= 0 || bestMaxX < bestMinX || bestMaxY < bestMinY) {
-    return { areaPx2: 0, widthPx: 0, heightPx: 0 };
+  if (bestArea <= 0 || bestTail <= 0) return;
+
+  // --- paint overlay (neon reflective pink) on SHEET overlay canvas ---
+  const cellW = Math.max(1, ds * sx);
+  const cellH = Math.max(1, ds * sy);
+
+  ctx.save();
+
+  // Clip to the bounding box (display-space)
+  const bx = roiX_disp + x0 * sx;
+  const by = roiY_disp + y0 * sy;
+  const bw = (x1 - x0) * sx;
+  const bh = (y1 - y0) * sy;
+  ctx.beginPath();
+  ctx.rect(bx, by, bw, bh);
+  ctx.clip();
+
+  // Add glow + reflective look
+  ctx.globalCompositeOperation = "screen";
+  ctx.shadowColor = "rgba(255, 0, 255, 0.95)";
+  ctx.shadowBlur = 12;
+  ctx.fillStyle = "rgba(255, 0, 255, 0.32)";
+
+  for (let k = 0; k < bestTail; k++) {
+    const px = x0 + bestX[k] * ds;
+    const py = y0 + bestY[k] * ds;
+    ctx.fillRect(roiX_disp + px * sx, roiY_disp + py * sy, cellW, cellH);
   }
 
-  const widthPx  = (bestMaxX - bestMinX + 1) * ds;
-  const heightPx = (bestMaxY - bestMinY + 1) * ds;
+  // inner brighter pass (spark)
+  ctx.shadowBlur = 18;
+  ctx.fillStyle = "rgba(255, 55, 255, 0.18)";
+  for (let k = 0; k < bestTail; k += 2) { // skip some pixels to keep FPS
+    const px = x0 + bestX[k] * ds;
+    const py = y0 + bestY[k] * ds;
+    ctx.fillRect(roiX_disp + px * sx, roiY_disp + py * sy, cellW, cellH);
+  }
 
-  return {
-    areaPx2: bestArea * (ds * ds),
-    widthPx,
-    heightPx
-  };
-}
-
-// ✅ Backward-compatible: return area only (เหมือนเดิม)
-function computeLargestBlobAreaPx2(data, w, h, x0, y0, x1, y1, lightBias) {
-  return computeLargestBlobMetricsPx(data, w, h, x0, y0, x1, y1, lightBias).areaPx2;
+  ctx.restore();
 }
 
     // =========================================================
@@ -2250,13 +2348,11 @@ sheetCtx.restore();
         const y0 = clamp(b.y0, 0, roiH_v - 1);
         const y1 = clamp(b.y1, 0, roiH_v);
 
-        const blob = computeLargestBlobMetricsPx(
-  data, roiW_v, roiH_v, x0, y0, x1, y1, lightBias
-);
+        const areaPx2 = computeLargestBlobAreaPx2(
+          data, roiW_v, roiH_v, x0, y0, x1, y1, lightBias
+        );
 
-const areaPx2 = blob.areaPx2;
-const blobWpx = blob.widthPx;
-const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v, lightBias);
+        const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v, lightBias);
         const dispW = Math.max(40, gapGeo.width * sx);
         const dispX = roiX_disp + (roiW_disp - dispW) / 2;
 
@@ -2269,7 +2365,6 @@ const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v, lightBias);
           dispX,
           dispW,
           areaPx2,
-  blobWpx,
           peakValue,
           conf
         });
@@ -2317,9 +2412,22 @@ const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v, lightBias);
         const prefix = `#${layerNo}`;
         const xOffset = 58;
         const gapMM_disp = jitterGapMm_(gapMM, `hud_${layerNo}_${gapPx}`);
-        const blobWpx = Math.round(t.blobWEma ?? 0);
-const labelText = `${prefix}  ${gapMM_disp.toFixed(2)} mm (${gapPx}px)  | blobW ${blobWpx}px`;
-sheetCtx.fillStyle = bgColor;
+        const labelText = `${prefix}  ${gapMM_disp.toFixed(2)} mm (${gapPx}px)`;
+
+
+
+
+// ✅ Paint detected blob inside current bounding band (neon pink)
+try {
+  const localY_v = clamp(Math.round(t.yEma ?? 0), 0, roiH_v - 1);
+  const bandHalf = Math.max(6, Math.floor(minDist / 2));
+  const bx0 = Math.floor(roiW_v * 0.25);
+  const bx1 = Math.floor(roiW_v * 0.75);
+  const by0 = clamp(localY_v - bandHalf, 0, roiH_v - 1);
+  const by1 = clamp(localY_v + bandHalf, 0, roiH_v);
+
+  paintLargestBlobOverlay_(sheetCtx, data, roiW_v, roiH_v, bx0, by0, bx1, by1, lightBias, roiX_disp, roiY_disp, sx, sy);
+} catch (e) { /* no-op */ }sheetCtx.fillStyle = bgColor;
         sheetCtx.fillRect(dispX, drawY - 8, dispW, 16);
 
         sheetCtx.strokeStyle = boxColor;
