--- a/gluegap.html
+++ b/gluegap.html
@@ -1469,6 +1469,7 @@
           best.dispXEma = lerp(best.dispXEma ?? nextX, nextX, EMA_X);
 
           best.areaEma = lerp(best.areaEma ?? m.areaPx2, m.areaPx2, EMA_AREA);
+          best.fillRatioEma = lerp(best.fillRatioEma ?? m.fillRatio, m.fillRatio, EMA_AREA);
           best.confEma = lerp(best.confEma ?? m.conf, m.conf, EMA_CONF);
 
           best.drawYEma = deadband(best.drawYEma, best.drawYEma, 0.6);
@@ -1485,6 +1486,7 @@
             dispXEma: m.dispX,
             dispWEma: m.dispW,
             areaEma: m.areaPx2,
+            fillRatioEma: m.fillRatio,
             confEma: m.conf,
             _matched: true
           });
@@ -2071,12 +2073,12 @@ function paintLargestBlobOverlay_(ctx, data, w, h, x0, y0, x1, y1, lightBias, ro
   x1 = Math.max(0, Math.min(w, x1));
   y0 = Math.max(0, Math.min(h - 1, y0));
   y1 = Math.max(0, Math.min(h, y1));
-  if (x1 <= x0 + 2 || y1 <= y0 + 2) return 0;
+  if (x1 <= x0 + 2 || y1 <= y0 + 2) return;
 
   const ds = 3; // MUST match computeLargestBlobAreaPx2()
   const gw = Math.floor((x1 - x0) / ds);
   const gh = Math.floor((y1 - y0) / ds);
-  if (gw < 6 || gh < 6) return 0;
+  if (gw < 6 || gh < 6) return;
 
   const mask = new Uint8Array(gw * gh);
 
@@ -2151,7 +2153,7 @@ function paintLargestBlobOverlay_(ctx, data, w, h, x0, y0, x1, y1, lightBias, ro
     }
   }
 
-  if (bestArea <= 0 || bestTail <= 0) return 0;
+  if (bestArea <= 0 || bestTail <= 0) return;
 
   // --- paint overlay (neon reflective pink) on SHEET overlay canvas ---
   const cellW = Math.max(1, ds * sx);
@@ -2190,10 +2192,7 @@ function paintLargestBlobOverlay_(ctx, data, w, h, x0, y0, x1, y1, lightBias, ro
   }
 
   ctx.restore();
-
-  return bestArea * (ds * ds);
 }
-
 
     // =========================================================
     // GLUE GAP DETECTION (stabilized)
@@ -2355,6 +2354,11 @@ sheetCtx.restore();
           data, roiW_v, roiH_v, x0, y0, x1, y1, lightBias
         );
 
+        // ✅ Blob coverage ratio vs bounding box area (px^2)
+        // If blob fills < 70% of the bounding box, we will display 0 mm (rule applied at render stage)
+        const boxAreaPx2 = Math.max(1, (x1 - x0) * (y1 - y0));
+        const fillRatio = clamp(areaPx2 / boxAreaPx2, 0, 1);
+
         const gapGeo = analyzeGapWidthRow(data, roiW_v, roiH_v, localY_v, lightBias);
         const dispW = Math.max(40, gapGeo.width * sx);
         const dispX = roiX_disp + (roiW_disp - dispW) / 2;
@@ -2368,6 +2372,7 @@ sheetCtx.restore();
           dispX,
           dispW,
           areaPx2,
+          fillRatio,
           peakValue,
           conf
         });
@@ -2405,7 +2410,11 @@ sheetCtx.restore();
         const gapPx = Math.round(dispW / __sx); // แปลงกลับจาก display width -> px (ใน ROI)
 
         const gapMM_raw = pxToMm_15cm(gapPx);
-        const gapMM = Number.isFinite(gapMM_raw) ? gapMM_raw : 0;
+        let gapMM = Number.isFinite(gapMM_raw) ? gapMM_raw : 0;
+
+        // ✅ Rule: if blob pink coverage < 70% of its bounding box -> display 0 mm
+        const __fillRatio = (t.fillRatioEma ?? 0);
+        if (__fillRatio < 0.70) gapMM = 0;
 
         const outOfRangeMM = (gapMM < MM_MIN_OK || gapMM > MM_MAX_OK);
 
@@ -2415,8 +2424,7 @@ sheetCtx.restore();
         const prefix = `#${layerNo}`;
         const xOffset = 58;
         const gapMM_disp = jitterGapMm_(gapMM, `hud_${layerNo}_${gapPx}`);
-        let gapText = `${gapMM_disp.toFixed(2)} mm`;
-        let blobCoverage = null;
+        const labelText = `${prefix}  ${gapMM_disp.toFixed(2)} mm (${gapPx}px)`;
 
 
 
@@ -2430,19 +2438,8 @@ try {
   const by0 = clamp(localY_v - bandHalf, 0, roiH_v - 1);
   const by1 = clamp(localY_v + bandHalf, 0, roiH_v);
 
-  const boxAreaPx2 = Math.max(1, (bx1 - bx0) * (by1 - by0));
-  const blobAreaPx2 = paintLargestBlobOverlay_(sheetCtx, data, roiW_v, roiH_v, bx0, by0, bx1, by1, lightBias, roiX_disp, roiY_disp, sx, sy);
-  blobCoverage = blobAreaPx2 / boxAreaPx2;
-} catch (e) { /* no-op */ }
-
-// ✅ override display by blob coverage (pink area vs bounding box)
-if (typeof blobCoverage === "number" && isFinite(blobCoverage)) {
-  if (blobCoverage < 0.20) gapText = "0-2 mm";
-  else if (blobCoverage < 0.60) gapText = "0-1 mm";
-}
-const labelText = `${prefix}  ${gapText} (${gapPx}px)`;
-
-sheetCtx.fillStyle = bgColor;
+  paintLargestBlobOverlay_(sheetCtx, data, roiW_v, roiH_v, bx0, by0, bx1, by1, lightBias, roiX_disp, roiY_disp, sx, sy);
+} catch (e) { /* no-op */ }sheetCtx.fillStyle = bgColor;
         sheetCtx.fillRect(dispX, drawY - 8, dispW, 16);
 
         sheetCtx.strokeStyle = boxColor;
