--- a/gluegap.html
+++ b/gluegap.html
@@ -1470,6 +1470,7 @@
 
           best.areaEma = lerp(best.areaEma ?? m.areaPx2, m.areaPx2, EMA_AREA);
           best.fillRatioEma = lerp(best.fillRatioEma ?? m.fillRatio, m.fillRatio, EMA_AREA);
+          best.lineScoreEma = lerp(best.lineScoreEma ?? (m.lineScore || 0), (m.lineScore || 0), EMA_AREA);
           best.confEma = lerp(best.confEma ?? m.conf, m.conf, EMA_CONF);
 
           best.drawYEma = deadband(best.drawYEma, best.drawYEma, 0.6);
@@ -1487,6 +1488,7 @@
             dispWEma: m.dispW,
             areaEma: m.areaPx2,
             fillRatioEma: m.fillRatio,
+            lineScoreEma: (m.lineScore || 0),
             confEma: m.conf,
             _matched: true
           });
@@ -2064,6 +2066,129 @@ function resetLightBias() {
     }
 
 
+    // =========================================================
+    // ✅ METRICS: largest detected BLOB inside each bounding band
+    // Adds "line-like" classification (thin/elongated) for 0 mm display rule
+    // =========================================================
+    function computeLargestBlobMetrics_(data, w, h, x0, y0, x1, y1, lightBias) {
+      x0 = Math.max(0, Math.min(w - 1, x0));
+      x1 = Math.max(0, Math.min(w, x1));
+      y0 = Math.max(0, Math.min(h - 1, y0));
+      y1 = Math.max(0, Math.min(h, y1));
+      if (x1 <= x0 + 2 || y1 <= y0 + 2) return { areaPx2: 0, extent: 0, aspect: 0, minDimPx: 0, lineScore: 0 };
+
+      const ds = 3; // MUST match computeLargestBlobAreaPx2() + paintLargestBlobOverlay_()
+      const gw = Math.floor((x1 - x0) / ds);
+      const gh = Math.floor((y1 - y0) / ds);
+      if (gw < 6 || gh < 6) return { areaPx2: 0, extent: 0, aspect: 0, minDimPx: 0, lineScore: 0 };
+
+      const mask = new Uint8Array(gw * gh);
+
+      // build threshold mask (same logic as computeLargestBlobAreaPx2)
+      let sum = 0, cnt = 0, minL = 255;
+      for (let gy = 0; gy < gh; gy++) {
+        const py = y0 + gy * ds;
+        const row = py * w * 4;
+        for (let gx = 0; gx < gw; gx++) {
+          const px = x0 + gx * ds;
+          const i = row + px * 4;
+          const luma = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+          sum += luma; cnt++;
+          if (luma < minL) minL = luma;
+        }
+      }
+      const mean = cnt ? sum / cnt : 180;
+      const thr = Math.max(0, Math.min(255, mean - 10 - (lightBias || 0) * 0.08));
+
+      for (let gy = 0; gy < gh; gy++) {
+        const py = y0 + gy * ds;
+        const row = py * w * 4;
+        for (let gx = 0; gx < gw; gx++) {
+          const px = x0 + gx * ds;
+          const i = row + px * 4;
+          const luma = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+          if (luma <= thr) mask[gy * gw + gx] = 1;
+        }
+      }
+
+      const visited = new Uint8Array(gw * gh);
+      const qx = new Int16Array(gw * gh);
+      const qy = new Int16Array(gw * gh);
+
+      let bestArea = 0;
+      let bestMinX = 0, bestMaxX = 0, bestMinY = 0, bestMaxY = 0;
+
+      for (let gy = 1; gy < gh - 1; gy++) {
+        for (let gx = 1; gx < gw - 1; gx++) {
+          const idx = gy * gw + gx;
+          if (!mask[idx] || visited[idx]) continue;
+
+          let head = 0, tail = 0;
+          visited[idx] = 1;
+          qx[tail] = gx; qy[tail] = gy; tail++;
+
+          let area = 0;
+          let minX = gx, maxX = gx, minY = gy, maxY = gy;
+
+          while (head < tail) {
+            const x = qx[head], y = qy[head]; head++;
+            area++;
+
+            if (x < minX) minX = x;
+            if (x > maxX) maxX = x;
+            if (y < minY) minY = y;
+            if (y > maxY) maxY = y;
+
+            const n1 = (y - 1) * gw + x;
+            const n2 = (y + 1) * gw + x;
+            const n3 = y * gw + (x - 1);
+            const n4 = y * gw + (x + 1);
+
+            if (y > 0 && mask[n1] && !visited[n1]) { visited[n1] = 1; qx[tail] = x; qy[tail] = y - 1; tail++; }
+            if (y < gh - 1 && mask[n2] && !visited[n2]) { visited[n2] = 1; qx[tail] = x; qy[tail] = y + 1; tail++; }
+            if (x > 0 && mask[n3] && !visited[n3]) { visited[n3] = 1; qx[tail] = x - 1; qy[tail] = y; tail++; }
+            if (x < gw - 1 && mask[n4] && !visited[n4]) { visited[n4] = 1; qx[tail] = x + 1; qy[tail] = y; tail++; }
+          }
+
+          if (area > bestArea) {
+            bestArea = area;
+            bestMinX = minX; bestMaxX = maxX;
+            bestMinY = minY; bestMaxY = maxY;
+          }
+        }
+      }
+
+      const areaPx2 = bestArea * (ds * ds);
+      if (bestArea <= 0) return { areaPx2: 0, extent: 0, aspect: 0, minDimPx: 0, lineScore: 0 };
+
+      const bboxWPx = Math.max(1, (bestMaxX - bestMinX + 1) * ds);
+      const bboxHPx = Math.max(1, (bestMaxY - bestMinY + 1) * ds);
+      const bboxAreaPx2 = Math.max(1, bboxWPx * bboxHPx);
+
+      const extent = clamp(areaPx2 / bboxAreaPx2, 0, 1);
+      const maxDim = Math.max(bboxWPx, bboxHPx);
+      const minDim = Math.max(1, Math.min(bboxWPx, bboxHPx));
+      const aspect = maxDim / minDim;
+
+      // Line-like heuristic:
+      // - very thin + elongated OR sparse inside its own bbox
+      const THIN_PX = 12;        // ~4 grid cells at ds=3
+      const ASPECT_STRONG = 4.0;
+      const ASPECT_MED = 2.5;
+      const EXTENT_SPARSE = 0.35;
+
+      const isLineLike = (minDim <= THIN_PX && aspect >= ASPECT_MED) || (extent <= EXTENT_SPARSE && aspect >= ASPECT_MED) || (minDim <= (THIN_PX * 0.75) && aspect >= ASPECT_STRONG);
+
+      return {
+        areaPx2,
+        extent,
+        aspect,
+        minDimPx: minDim,
+        lineScore: isLineLike ? 1 : 0
+      };
+    }
+
+
 // =========================================================
 // ✅ VISUAL: paint largest detected BLOB inside each bounding "box"
 // (Neon reflective pink overlay)
@@ -2350,9 +2475,11 @@ sheetCtx.restore();
         const y0 = clamp(b.y0, 0, roiH_v - 1);
         const y1 = clamp(b.y1, 0, roiH_v);
 
-        const areaPx2 = computeLargestBlobAreaPx2(
+        const __blob = computeLargestBlobMetrics_(
           data, roiW_v, roiH_v, x0, y0, x1, y1, lightBias
         );
+        const areaPx2 = __blob.areaPx2;
+        const lineScore = __blob.lineScore;
 
         // ✅ Blob coverage ratio vs bounding box area (px^2)
         // If blob fills < 20% of the bounding box, we will display 0 mm (rule applied at render stage)
@@ -2416,6 +2543,10 @@ sheetCtx.restore();
         const __fillRatio = (t.fillRatioEma ?? 0);
         if (__fillRatio < 0.20) gapMM = 0;
 
+        // ✅ Rule: if blob pink looks like a LINE (thin/elongated) -> display 0 mm
+        const __lineScore = (t.lineScoreEma ?? 0);
+        if (__lineScore > 0.55) gapMM = 0;
+
         const outOfRangeMM = (gapMM < MM_MIN_OK || gapMM > MM_MAX_OK);
 
         const boxColor = outOfRangeMM ? "#ef4444" : "#34d399";
@@ -2424,8 +2555,7 @@ sheetCtx.restore();
         const prefix = `#${layerNo}`;
         const xOffset = 58;
         const gapMM_disp = jitterGapMm_(gapMM, `hud_${layerNo}_${gapPx}`);
-        const fillPct = Math.round(__fillRatio * 100);
-        const labelText = `${prefix}  ${gapMM_disp.toFixed(2)} mm (${fillPct}%)`;
+        const labelText = `${prefix}  ${gapMM_disp.toFixed(2)} mm (${gapPx}px)`;
 
 
 
